set(TARGET yawt)

file(GLOB_RECURSE SRC *.cpp)
file(GLOB_RECURSE HDR *.h)

include_directories(${YAWT_INCLUDE_DIR})
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/src")

add_definitions(-DRENDERER_EXPORT)

add_library(${TARGET} SHARED ${SRC})

install(TARGETS ${TARGET}
	RUNTIME DESTINATION ${PROJECT_BINARY_DIR}/bin
	LIBRARY DESTINATION ${PROJECT_BINARY_DIR}/lib
	ARCHIVE DESTINATION ${PROJECT_BINARY_DIR}/lib/static)